packages/typ/tests/fixtures/diagnostics/0073_core_plus_bool_07.ml.infer.expected
File "0073_core_plus_bool_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0073_core_plus_bool_07 is not a valid module name.

File "0073_core_plus_bool_07.ml", line 2, characters 32-36:
2 | let _ = if true then 6 else 1 + true
                                    ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
